--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "webpack serve --mode development",
-    "build": "webpack --mode production"
+    "dev": "npm-run-all --parallel webpack-dev start",
+    "webpack-dev": "webpack serve --env mode=development --mode development",
+    "build": "webpack --env mode=production --mode production"
   },
   "author": "lyp1noff",
   "license": "ISC",
@@ -23,6 +24,7 @@
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
     "html-webpack-plugin": "^5.6.0",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^4.0.0",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
