--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "npm-run-all --parallel webpack-dev start",
-    "webpack-dev": "webpack serve --env mode=development --mode development",
-    "build": "webpack --env mode=production --mode production"
+    "webpack-dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "lyp1noff",
   "license": "ISC",
@@ -20,9 +20,12 @@
   "devDependencies": {
     "@babel/core": "^7.24.7",
     "@babel/preset-env": "^7.24.7",
+    "@eslint/js": "^9.6.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "dotenv-webpack": "^8.1.0",
+    "eslint": "^9.6.0",
+    "globals": "^15.8.0",
     "html-webpack-plugin": "^5.6.0",
     "npm-run-all": "^4.1.5",
     "style-loader": "^4.0.0",
