--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "video-stream",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
