admin page with login

--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,5 @@
+PRODUCTION=false
+SESSION_SECRET=your-secret-key
 WS_SERVER_URL=ws://localhost:3030
 PLAYER_URL=http://localhost:8889/stream
+STREAM_API_URL=http://127.0.0.1:9997
