wOw - devServer removed - Admin page, IP in chat - Hide chat button - iPhone height fix - full WebSocket chat - npm updated

--- a/.env.development
+++ b/.env.development
@@ -3,3 +3,4 @@ SESSION_SECRET=your-secret-key
 WS_SERVER_URL=ws://localhost:3030
 PLAYER_URL=http://localhost:8889/stream
 STREAM_API_URL=http://127.0.0.1:9997
+ADMIN_API_KEY=your-secret-key
