--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "npm-run-all --parallel webpack-dev server-dev",
-    "server-dev": "nodemon --env-file=.env.development server.js",
-    "webpack-dev": "webpack serve --config webpack.dev.js",
+    "dev": "nodemon --env-file=.env.development server.js",
     "build": "webpack --config webpack.prod.js"
   },
   "author": "lyp1noff",
@@ -39,8 +37,8 @@
     "nodemon": "^3.1.4",
     "npm-run-all": "^4.1.5",
     "style-loader": "^4.0.0",
-    "webpack": "^5.92.1",
+    "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-dev-middleware": "^7.3.0"
   }
 }
